Improve range iterator tests: deterministic bounds, unbiased ranges, random index sort